--- a/style.css
+++ b/style.css
@@ -1,268 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,200;0,400;0,700;1,400&display=swap');
-
-* {
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'Albert Sans', sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
-.center {
-    margin: 0 auto;
-}
-
-header {
-    display: inline;
-}
-
-main {
-    padding: 20px;
-    overflow: auto;
-}
-
-h1 {
-    font-size: 40px;
-}
-
-h2 {
-    font-size: 34px;
-    text-decoration: underline;
-}
-
-h3 {
-    font-size: 28px;
-}
-
-h4 {
-    font-size: 22px;
-}
-
-h5 {
-    font-size: 18px;
-}
-
-a {
-    text-decoration: none;
-}
-
-.layout-margin {
-    margin-top: 100px;
-}
-
-/* MENU */
-nav {
-    background-color: #fff;
-    position: sticky;
-    top: 0;
-    padding: 5px;
-    text-align: center;
-}
-
-nav:after {
-    bottom: -5px;
-    box-shadow: 0px 6px 6px -6px rgba(0, 0, 0, .25) inset;
-    content: "";
-    height: 6px;
-    position: absolute;
-    width: 100%;
-    left: 0px;
-}
-
-nav li {
-    display: inline;
-    list-style-type: none;
-    margin-right: 20px;
-}
-
-nav a {
-    font-size: 18px;
-    font-weight: 400;
-    text-decoration: none;
-    color: #000;
-}
-
-nav a:hover {
-    font-weight: bold;
-    color: #B2A4FF;
-}
-
-/* HOME */
-.home-view {
-    text-align: center;
-    padding: 20px;
-    max-width: 460px;
-}
-
-.home-view img {
-    max-width: 150px;
-    padding: 20px;
-}
-
-/* MAIN */
-#content {
-    margin-top: 20px;
-    float: left;
-    width: 75%;
-}
-
-#content h2 {
-    text-align: center;
-}
-
-aside {
-    float: right;
-    width: 25%;
-    padding-left: 20px;
-}
-
-.card {
-    box-shadow: 2px 3px 5px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    padding: 20px;
-    margin-top: 20px;
-}
-
-button {
-    background-color: #000;
-    color: #fff;
-    height: 44px;
-    border: none;
-    margin: 10px 0px;
-    padding: 10px;
-    border-radius: 6px;
-    border: 3px solid #fff;
-}
-
-button:hover {
-    background-color: #fff;
-    color: #000;
-    border: 3px solid #000;
-}
-
-button.mark {
-    margin: 10px;
-}
-
-
-/* RESUME */
-#resume {
-    padding: 20px;
-    margin: 0 auto;
-}
-
-.flex-container-column {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-
-.flex-container-row {
-    display: flex;
-    flex-direction: row;
-    flex-grow: 1;
-}
-
-.resume-item {
-    flex-basis: 50%;
-}
-
-.item-info b, .item-info p {
-    position: relative;
-    left: 20px;
-}
-
-.item-info b::before, .item-info p::before {
-    font-weight: bold;
-    content:  "\927 \ .. ";
-}
-
-/* SERVICE */
-#services {
-    margin: 120px 0px;
-}
-
-.service {
-    text-align: center;
-    padding: 20px;
-    max-width: 900px;
-}
-
-.service h2 {
-    margin-top: 20px;
-}
-
-.service-card {
-    min-width: 250px;
-    height: 250px;
-    /* box-shadow: 2px 4px 5px 1px rgba(0, 0, 0, 0.2); */
-    border: 1px solid #000;
-    border-radius: 5px;
-    padding: 20px;
-    margin-top: 20px;
-}
-
-.service-data {
-    margin: 20px;
-}
-
-/* SIDEBAR */
-.profile header {
-    text-align: center;
-}
-
-.profile img {
-    width: 200px;
-}
-
-/* FOOTER */
-footer {
-    height: 75px;
-    background-color: #000;
-    border-top: 4px solid #B2A4FF;
-    padding: 20px;
-    color: white;
-    text-align: center;
-    margin-top: 20px;
-}
-
-/* MEDIA QUERY */
-@media screen and (max-width: 1080px) {
-    #content,
-    aside {
-        width: 100%;
-        padding: 0;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    nav a {
-        font-size: 14px;
-    }
-    
-    #services {
-        margin: 20px 0px;
-    }
-    
-    .flex-container-row {
-        flex-direction: column;
-    }
-}
-
-
-
-@media screen and (max-width: 504px) {
-    nav a {
-        font-size: 12px;
-    }
-    
-    #services {
-        margin: 20px 0px;
-    }
-
-    .flex-container-row {
-        flex-direction: column;
-    }
-}
+@import url(https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,200;0,400;0,700;1,400&display=swap);.center,nav{text-align:center}span,span:hover{font-weight:700}.japanese,.roman{font-family:sans-serif;font-weight:600}a,button,span:hover{cursor:pointer}#menu,.button>a>button,body{background-color:#fff}.education,.experience,.home,.projects{box-shadow:0 0 8px 6px #fbf8f1}*{box-sizing:border-box;margin:0;padding:0}body{font-family:'Albert Sans',sans-serif}a{text-decoration:none}.center{margin:0 auto}.container{margin:0}.experience,.home,nav{margin:30px}h1{font-size:36px}h3{font-size:24px}h4{font-size:18px}nav{color:#fff;border-radius:20px;top:0}nav>.flex-column>.flex-row{justify-content:space-between;align-items:center}span:hover{color:#fd746c}#menu{border-top:5px solid #fd746c;padding:10px;position:fixed;width:100%;bottom:0}.buttontabs{width:200px;display:flex;justify-content:space-around;justify-items:center;border:none;flex-direction:column;align-items:center;color:#fff;padding:15px;border-radius:10px}.buttontabs:hover{background-color:#000;color:#fff}.purple{background-color:rgba(91,55,183,.2);color:#5b37b7}.pink{background-color:rgba(201,55,157,.2);color:#c9379d}.yellow{background-color:rgba(230,169,25,.2);color:#e6a919}.teal{background-color:rgba(28,150,162,.2);color:#1c96a2}.blue{background-color:rgb(108,118,253,.2);color:#6c76fd}.green{background-color:rgb(43,255,0,.2);color:#2bff00}.red{background-color:rgb(253,116,108,.2);color:#fd746c}.roman{font-size:12px}.flex-column{display:flex;flex-direction:column;width:100%}.certificate-row,.flex-row{display:flex;flex-direction:row}.button>a>button{min-width:100px;padding:8px;border:2px solid #000;border-radius:5px}.button>a>button.btn:hover,.button>a>button:hover,.tools>button:hover,button.btn:hover{background-color:#000;color:#fff;border-top:2px solid #fd746c}.button>a>button.btn,button.btn{background-color:#fd746c;color:#fff;padding:8px}.button>a>button.btn{min-width:100px;border:2px solid transparent;border-radius:5px}button.btn{width:100px;border:2px solid transparent;border-radius:5px}.tools>button{background-color:#fff;border:2px solid #000;margin:3px;padding:8px;border-radius:5px}.home{border-radius:20px;background-color:rgba(91,55,183,.5);color:#fff}.about-me>.flex-row>.center.first>img,.home>.flex-row>.center>img{height:200px}.about-me>.flex-row>.center.first>*,.home>.flex-row>.center>*{padding:20px;justify-content:space-around}.home>.flex-row>.center>.button>a>button{min-width:100px;background-color:rgba(91,55,183,.5);margin:3px;padding:8px;color:#fff;border:2px solid #fff;border-radius:5px}.home>.flex-row>.center>.button>a>button:hover{background-color:#fff;color:#5b37b7;border:2px solid #5b37b7}.home>.flex-row>.center>.last-update>button{background-color:#fff;color:#5b37b7;border:none;padding:2px;border-radius:2px}.experience{border-radius:20px;background-color:rgba(28,150,162,.5);color:#fff}.about-me>*,.certificate>*,.education>*,.experience>*,.projects>*{padding:10px 20px}.card-experience{min-width:300px;min-height:370px;background-color:#fff;border:3px solid #000;color:#000;border-radius:10px;padding:20px;justify-content:space-around;margin:10px}button.type-experience{min-width:100px;background-color:#1c96a2;padding:8px;border:2px solid #fff;border-radius:5px;color:#fff}.education{margin:30px;border-radius:20px;background-color:rgba(201,55,157,.5);color:#fff}.card-education{background-color:#fff;border:3px solid #000;color:#000;border-radius:10px;padding:20px;justify-content:space-around;margin:10px}.card-education>*{padding:10px}.projects{margin:30px;border-radius:20px;background-color:rgba(230,169,25,.5);color:#fff}.card-certificate,.card-projects{min-width:400px;min-height:200px;border:3px solid #000;background-color:#fff;color:#000;border-radius:10px;padding:20px;justify-content:space-between;margin:10px}.card-projects.flex-column>div,.card-projects.flex-column>p{margin-top:20px}div.demo-btn>a>button{min-width:100px;background-color:#e6a919;padding:8px;border:2px solid #fff;border-radius:5px;color:#fff}div.demo-btn>a>button:hover{background-color:#fff;color:#e6a919;border:2px solid #e6a919}.about-me,.certificate{margin:30px;border-radius:20px;box-shadow:0 0 8px 6px #fbf8f1;color:#fff}.card-projects.flex-column>.tools{margin-top:10px}.card-projects.flex-column>img{border-radius:12px}.card-projects.flex-column>p{text-align:start}.certificate{background-color:rgb(43,255,0,.5)}.flex-row>.card-certificate.flex-column .flex-row::first-letter{flex-basis:2}.button.flex-column{flex-basis:1;justify-content:space-evenly;align-items:flex-end}.about-me{background-color:rgb(253,116,108,.5)}.about-me.white{background-color:#fff;color:#000;border:3px solid #000}.about-me>.flex-row>.center.second>.flex-row>*{margin:10px}.about-me>.flex-row>.center.second>.flex-row>div>*{padding:10px;justify-content:space-around}.about-me>.flex-row>.center.second>.flex-row>div>img{height:100px}button.btn-about{width:auto;background-color:#fd746c;padding:8px;border:2px solid #fff;border-radius:5px;color:#fff}@media screen and (max-width:1080px){.certificate-row,.experience>.flex-row,.projects>.flex-row{flex-direction:column}.flex-row>.card-experience.flex-column,.flex-row>.card-projects.flex-column{margin:20px 0 0}.certificate,.projects{margin:20px}.certificate-row>.card-certificate.flex-column{min-width:0;min-height:0;margin:20px 0 0}.card-projects{min-width:0;min-height:0;margin:0}}@media screen and (max-width:768px){.certificate,.projects,nav{margin:20px}nav>.flex-column>.flex-row{flex-direction:column;flex-wrap:wrap;flex:2}nav>.flex-column>.flex-row>button{width:100%;margin-top:10px}.about-me>.flex-row>.center.second>.flex-row,.certificate-row,.education>.flex-row,.experience>.flex-row,.projects>.flex-row{flex-direction:column}.flex-row>.card-education.flex-column,.flex-row>.card-experience.flex-column,.flex-row>.card-projects.flex-column{margin:20px 0 0}.certificate-row>.card-certificate.flex-column{min-width:0;min-height:0;margin:20px 0 0}.card-projects{min-width:0;min-height:0;margin:0}}@media screen and (max-width:504px){.experience>.flex-row{flex-direction:column}}
